--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ box-sizing: border-box;
 height: 600px;}
 
 .Hades{display:flex;
-   
+  align-content: stretch;
+   justify-content: stretch;
     box-sizing: border-box;
     width: 1250px;
     border:solid;
@@ -45,7 +46,7 @@ height: 600px;}
     align-content:flex-end;
     justify-content:flex-start;
     box-sizing: border-box;
-    width: 750px;
+    width: 650px;
     border:solid;
     margin: 30px;
 
@@ -103,6 +104,13 @@ border: 2px solid;
 padding: 20px;
 border-radius: 8px;}
 
+.Para{border: 2px solid;
+padding: 20px;
+color: rgb(2, 39, 7);
+font-size: 24px;
+background-color: rgb(226, 226, 226);
+margin:20px ;}
+
 a:link{ color:rgb(2, 31, 6);
   font-size: 24px;
 }
@@ -117,3 +125,5 @@ a:hover{ color: #39ADCD;
 a:active { color: rgb(2, 97, 15);
   font-size: 24px;
   text-decoration-style:dotted}
+
+ 
